--- a/proyectoFinal/public/assets/css/style.css
+++ b/proyectoFinal/public/assets/css/style.css
@@ -1,7 +1,13 @@
 body {
-    background-color: #B5EDF5;
+    /*background-color: #B5EDF5;*/
 }
 
 .card {
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.51);
+}
+
+#nav_principal {
+    position: fixed;
+    width: 100%;
+    z-index: 99;
 }
